Update 'go-oukjirqz' component image to: quay.io/rhtap_qe/go-oukjirqz:fbd2fcff05b1dbd2d695e73575e217d9dbbae821@sha256:66d9c4a6974d6a3619816e78bd85cc6b00809026b3b17fce6bbe1a59569a55d9

--- a/components/go-oukjirqz/overlays/development/deployment-patch.yaml
+++ b/components/go-oukjirqz/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-oukjirqz
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-oukjirqz:fbd2fcff05b1dbd2d695e73575e217d9dbbae821@sha256:66d9c4a6974d6a3619816e78bd85cc6b00809026b3b17fce6bbe1a59569a55d9
+          name: container-image
